--- a/webclient/src/main/resources/templates/reset-password.html
+++ b/webclient/src/main/resources/templates/reset-password.html
@@ -1,1 +1,46 @@
-<h1>Reset Password</h1>
+<!DOCTYPE html>
+<html xmlns:th="http:/www.thymeleaf.org">
+<head>
+    <meta charset="ISO-8859-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Reset Password - Microservice Assignment</title>
+    <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+
+<section class="ftco-section">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-7 col-lg-5">
+                <div class="wrap">
+                    <div class="login-wrap p-4 p-md-5">
+                        <div class="d-flex">
+                            <div class="w-100">
+                                <h3 class="mb-4">Reset Password</h3>
+                            </div>
+                        </div>
+                        <form th:action="@{/doResetPassword}" method="post" class="signin-form">
+                            <div class="form-group mt-3">
+                                <input id="emailId" type="email" class="form-control" name="emailId" required>
+                                <label class="form-control-placeholder" for="emailId">Email Address</label>
+                            </div>
+                            <!--<div class="form-group">
+                                <input id="password" type="password" class="form-control" name="password"required>
+                                <label class="form-control-placeholder" for="password">Password</label>
+                            </div>-->
+                            <div class="form-group">
+                                <button type="submit" class="form-control btn btn-primary rounded submit px-3">Reset Password</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+</body>
+</html>
