--- a/webclient/src/main/resources/templates/dashboard.html
+++ b/webclient/src/main/resources/templates/dashboard.html
@@ -1,1 +1,64 @@
-<h1>DASHBOARD</h1>
+<!DOCTYPE html>
+<html xmlns:th="http:/www.thymeleaf.org">
+<head>
+    <meta charset="ISO-8859-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Dashboard - Microservice Assignment</title>
+    <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
+</head>
+
+<body>
+<section class="ftco-section">
+    <div class="container">
+        <div class="p-2 float-right">
+            <span>Welcome Sayan </span>
+            <a th:href="@{/logout}" class="btn btn-info btn-sm">Logout</a>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-7 col-lg-5">
+                <div class="wrap">
+                    <div class="login-wrap p-7 p-md-6">
+                        <div class="d-flex">
+                            <div class="w-100">
+                                <h3 class="mb-4">Dashboard</h3>
+                            </div>
+                        </div>
+                        <div class="card" >
+                            <div class="card-body">
+                                <h5 class="card-title">Profile</h5>
+                                <p class="card-text">Manage your profile</p>
+                                <form th:action="@{/updateProfile}" method="post" class="signin-form">
+                                    <div class="form-group mt-4">
+                                        <input id="firstName" type="text" class="form-control" name="firstName" required>
+                                        <label class="form-control-placeholder" for="firstName">First Name</label>
+                                    </div>
+                                    <div class="form-group mt-4">
+                                        <input id="lastName" type="text" class="form-control" name="lastName" required>
+                                        <label class="form-control-placeholder" for="lastName">Last Name</label>
+                                    </div>
+                                    <div class="form-group mt-4">
+                                        <input id="email" type="email" class="form-control" name="email" required>
+                                        <label class="form-control-placeholder" for="email">Email Address</label>
+                                    </div>
+                                    <div class="form-group mt-4">
+                                        <input id="phone" type="number" maxlength="10" class="form-control" name="phone" required>
+                                        <label class="form-control-placeholder" for="phone">Phone Number</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="submit" class="form-control btn btn-primary rounded submit px-3">Save Changes</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+</body>
+</html>
