--- a/webclient/src/main/resources/templates/new-password.html
+++ b/webclient/src/main/resources/templates/new-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="ISO-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Reset Password - Microservice Assignment</title>
+    <title>Enter New Password - Microservice Assignment</title>
     <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -17,16 +17,20 @@
                     <div class="login-wrap p-4 p-md-5">
                         <div class="d-flex">
                             <div class="w-100">
-                                <h3 class="mb-4">Reset Password</h3>
+                                <h3 class="mb-4">Enter New Password</h3>
                             </div>
                         </div>
-                        <form th:action="@{/doResetPassword}" method="post" class="signin-form">
-                            <div class="form-group mt-3">
-                                <input id="emailId" type="email" class="form-control" name="emailId" required>
-                                <label class="form-control-placeholder" for="emailId">Email Address</label>
+                        <form th:action="@{/addNewPassword}" method="post" class="signin-form">
+                            <div class="form-group">
+                                <input id="password" type="password" class="form-control" name="password"required>
+                                <label class="form-control-placeholder" for="password">New Password</label>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary rounded submit px-3">Reset Password</button>
+                                <input id="confirmPassword" type="text" class="form-control" name="confirmPassword"required>
+                                <label class="form-control-placeholder" for="confirmPassword">Confirm Password</label>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="form-control btn btn-primary rounded submit px-3">Submit</button>
                             </div>
                         </form>
                     </div>
