--- a/webclient/src/main/resources/templates/registration.html
+++ b/webclient/src/main/resources/templates/registration.html
@@ -22,11 +22,11 @@
                         </div>
                         <form th:action="@{/doRegister}" method="post" class="signin-form">
                             <div class="form-group mt-3">
-                                <input id="firstName" type="email" class="form-control" name="firstName" required>
+                                <input id="firstName" type="text" class="form-control" name="firstName" required>
                                 <label class="form-control-placeholder" for="firstName">First Name</label>
                             </div>
                             <div class="form-group mt-3">
-                                <input id="lastName" type="email" class="form-control" name="lastName" required>
+                                <input id="lastName" type="text" class="form-control" name="lastName" required>
                                 <label class="form-control-placeholder" for="lastName">Last Name</label>
                             </div>
                             <div class="form-group mt-3">
@@ -34,11 +34,11 @@
                                 <label class="form-control-placeholder" for="email">Email Address</label>
                             </div>
                             <div class="form-group mt-3">
-                                <input id="phone" type="email" class="form-control" name="phone" required>
+                                <input id="phone" type="number" maxlength="10" class="form-control" name="phone" required>
                                 <label class="form-control-placeholder" for="phone">Phone Number</label>
                             </div>
                             <div class="form-group mt-3">
-                                <input id="username" type="email" class="form-control" name="username" required>
+                                <input id="username" type="text" class="form-control" name="username" required>
                                 <label class="form-control-placeholder" for="username">Username</label>
                             </div>
                             <div class="form-group">
@@ -46,7 +46,7 @@
                                 <label class="form-control-placeholder" for="password">Password</label>
                             </div>
                             <div class="form-group">
-                                <input id="confirmPassword" type="password" class="form-control" name="confirmPassword"required>
+                                <input id="confirmPassword" type="text" class="form-control" name="confirmPassword"required>
                                 <label class="form-control-placeholder" for="confirmPassword">Confirm Password</label>
                             </div>
                             <div class="form-group">
