--- a/webclient/src/main/resources/templates/dashboard.html
+++ b/webclient/src/main/resources/templates/dashboard.html
@@ -27,7 +27,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Profile</h5>
                                 <p class="card-text">Manage your profile</p>
-                                <form th:action="@{/updateProfile}" method="post" class="signin-form">
+                                <form class="signin-form">
                                     <div class="form-group mt-4">
                                         <input id="firstName" type="text" class="form-control" name="firstName" required>
                                         <label class="form-control-placeholder" for="firstName">First Name</label>
@@ -45,7 +45,7 @@
                                         <label class="form-control-placeholder" for="phone">Phone Number</label>
                                     </div>
                                     <div class="form-group">
-                                        <button type="submit" class="form-control btn btn-primary rounded submit px-3">Save Changes</button>
+                                        <button id="updateBtn" class="form-control btn btn-primary rounded submit px-3">Save Changes</button>
                                     </div>
                                 </form>
                             </div>
@@ -58,7 +58,29 @@
     </div>
 </section>
 
+<!-- Modal -->
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Success</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Profile updated successfully.
+            </div>
+            <div class="modal-footer">
+                <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/dashboard.js}"></script>
 </body>
 </html>
