--- a/webclient/src/main/resources/templates/new-password.html
+++ b/webclient/src/main/resources/templates/new-password.html
@@ -22,8 +22,8 @@
                         </div>
                         <form th:action="@{/addNewPassword}" method="post" class="signin-form">
                             <div class="form-group">
-                                <input id="password" type="password" class="form-control" name="password"required>
-                                <label class="form-control-placeholder" for="password">New Password</label>
+                                <input id="newPassword" type="password" class="form-control" name="newPassword"required>
+                                <label class="form-control-placeholder" for="newPassword">New Password</label>
                             </div>
                             <div class="form-group">
                                 <input id="confirmPassword" type="text" class="form-control" name="confirmPassword"required>
