--- a/webclient/src/main/resources/templates/reset-password.html
+++ b/webclient/src/main/resources/templates/reset-password.html
@@ -22,8 +22,8 @@
                         </div>
                         <form th:action="@{/doResetPassword}" method="post" class="signin-form">
                             <div class="form-group mt-3">
-                                <input id="emailId" type="email" class="form-control" name="emailId" required>
-                                <label class="form-control-placeholder" for="emailId">Email Address</label>
+                                <input id="username" type="text" class="form-control" name="username" required>
+                                <label class="form-control-placeholder" for="username">Username</label>
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="form-control btn btn-primary rounded submit px-3">Reset Password</button>
