add error handling for fallback of login page

--- a/webclient/src/main/resources/templates/login.html
+++ b/webclient/src/main/resources/templates/login.html
@@ -30,6 +30,9 @@
                                 <label class="form-control-placeholder" for="password">Password</label>
                             </div>
                             <div class="form-group">
+                                <span th:text="${error}" class="text-danger">hello</span>
+                            </div>
+                            <div class="form-group">
                                 <button type="submit" class="form-control btn btn-primary rounded submit px-3">Submit</button>
                             </div>
                             <div class="form-group d-md-flex">
