--- a/webclient/src/main/resources/templates/login.html
+++ b/webclient/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
                                 <label class="form-control-placeholder" for="password">Password</label>
                             </div>
                             <div class="form-group">
-                                <span th:text="${error}" class="text-danger">hello</span>
+                                <span th:text="${error}" class="text-danger">Error</span>
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="form-control btn btn-primary rounded submit px-3">Submit</button>
