--- a/webclient/src/main/resources/templates/registration.html
+++ b/webclient/src/main/resources/templates/registration.html
@@ -34,7 +34,8 @@
                                 <label class="form-control-placeholder" for="email">Email Address</label>
                             </div>
                             <div class="form-group mt-3">
-                                <input id="phone" type="number" maxlength="10" class="form-control" name="phone" required>
+                                <input id="phone" type="text" pattern="[789][0-9]{9}" oninvalid="this.setCustomValidity('Please enter valid phone number')"
+                                       oninput="this.setCustomValidity('')" class="form-control" name="phone" required>
                                 <label class="form-control-placeholder" for="phone">Phone Number</label>
                             </div>
                             <div class="form-group mt-3">
@@ -50,6 +51,9 @@
                                 <label class="form-control-placeholder" for="confirmPassword">Confirm Password</label>
                             </div>
                             <div class="form-group">
+                                <span th:text="${error}" class="text-danger">Error</span>
+                            </div>
+                            <div class="form-group">
                                 <button type="submit" class="form-control btn btn-primary rounded submit px-3">Register</button>
                             </div>
                         </form>
@@ -62,5 +66,6 @@
 
 <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/registration.js}"></script>
 </body>
 </html>
