--- a/webclient/src/main/resources/templates/new-password.html
+++ b/webclient/src/main/resources/templates/new-password.html
@@ -22,12 +22,15 @@
                         </div>
                         <form th:action="@{/addNewPassword}" method="post" class="signin-form">
                             <div class="form-group">
-                                <input id="newPassword" type="password" class="form-control" name="newPassword"required>
-                                <label class="form-control-placeholder" for="newPassword">New Password</label>
+                                <input id="password" type="password" class="form-control" name="newPassword"required>
+                                <label class="form-control-placeholder" for="password">New Password</label>
                             </div>
                             <div class="form-group">
                                 <input id="confirmPassword" type="text" class="form-control" name="confirmPassword"required>
                                 <label class="form-control-placeholder" for="confirmPassword">Confirm Password</label>
+                            </div>
+                            <div class="form-group">
+                                <span th:text="${error}" class="text-danger">Error</span>
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="form-control btn btn-primary rounded submit px-3">Submit</button>
@@ -42,5 +45,6 @@
 
 <script type="text/javascript" th:src="@{/js/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/registration.js}"></script>
 </body>
 </html>
