--- a/webclient/src/main/resources/templates/reset-password.html
+++ b/webclient/src/main/resources/templates/reset-password.html
@@ -26,6 +26,9 @@
                                 <label class="form-control-placeholder" for="username">Username</label>
                             </div>
                             <div class="form-group">
+                                <span th:text="${error}" class="text-danger">Error</span>
+                            </div>
+                            <div class="form-group">
                                 <button type="submit" class="form-control btn btn-primary rounded submit px-3">Reset Password</button>
                             </div>
                         </form>
