--- a/webclient/src/main/resources/templates/dashboard.html
+++ b/webclient/src/main/resources/templates/dashboard.html
@@ -57,8 +57,12 @@
                                         <label class="form-control-placeholder" for="email">Email Address</label>
                                     </div>
                                     <div class="form-group mt-4">
-                                        <input id="phone" type="number" maxlength="10" class="form-control" name="phone" th:value="${user.phone}"required>
+                                        <input id="phone" type="text" pattern="[789][0-9]{9}" oninvalid="this.setCustomValidity('Please enter valid phone number')"
+                                               oninput="this.setCustomValidity('')"  class="form-control" name="phone" th:value="${user.phone}"required>
                                         <label class="form-control-placeholder" for="phone">Phone Number</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <span id="error" th:text="${error}" class="text-danger">Error</span>
                                     </div>
                                     <div class="form-group">
                                         <button id="updateBtn" class="form-control btn btn-primary rounded submit px-3">Update Changes</button>
