--- a/webclient/src/main/resources/templates/dashboard.html
+++ b/webclient/src/main/resources/templates/dashboard.html
@@ -115,7 +115,7 @@
             </div>
             <div class="modal-footer">
                 <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
-                <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+                <button id="errorOk" type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
             </div>
         </div>
     </div>
